--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "erusev/parsedown": "^1.6",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
-        "symfony/asset": "*",
+        "symfony/asset": "4.2.*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
@@ -27,7 +27,8 @@
         "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
-        "symfony/webpack-encore-bundle": "^1.1",
+        "symfony/webpack-encore-bundle": "^1.5",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "*",
         "tgalopin/html-sanitizer-bundle": "^1.1",
         "twig/extensions": "^1.5",
@@ -42,6 +43,7 @@
         "symfony/css-selector": "*",
         "symfony/debug-bundle": "*",
         "symfony/dotenv": "*",
+        "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "*",
         "symfony/stopwatch": "*",
         "symfony/web-profiler-bundle": "*",
