--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.22.0",
+    "@symfony/webpack-encore": "^0.27.0",
     "bloodhound-js": "^1.2.3",
+    "bootstrap": "^4.3.1",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-tagsinput": "^0.7.1",
     "bootswatch": "^3.3.7",
+    "core-js": "^3.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
     "lato-font": "^3.0.0",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "7.0.1",
     "typeahead.js": "^0.11.1"
   },
   "license": "UNLICENSED",
